# wotcrawler

./: .dockerignore  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SCHEMA.md  config.example.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md
.planning/phases/01-schema-data-contract/: 01-01-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-DISCUSSION-LOG.md  01-UAT.md
.planning/phases/02-relay-acquisition-validation/: 02-01-PLAN.md  02-03-PLAN.md  02-03-SUMMARY.md  02-06-SUMMARY.md  02-07-SUMMARY.md  02-08-SUMMARY.md  02-09-PLAN.md  02-10-PLAN.md  02-10-SUMMARY.md  02-11-PLAN.md  02-RESEARCH.md  02-REVIEW.md  02-SPIKES.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md  deferred-items.md
.planning/phases/03-graph-writer-bfs-frontier/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-REVIEW.md  03-VALIDATION.md  03-VERIFICATION.md
.planning/phases/04-daemon-staleness-loop-observability/: 04-01-PLAN.md  (+12 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.sqlx/: query-0e6e244c8f340813d5e810a4124c4f3811c92a51c634c9a453b8a0dca0df55d2.json  query-12e9544621c25f70476fc02383c3b693d0a9b77dc262d91ab06cb69260452496.json  query-25f0bd9b331aa50719f13113e83b79950e3415984ca196bdcda6ade5f012c309.json  query-29ad9af68b4958ac7bc47029abaef40a2c937554aba6a6472471138dff1a7b33.json  query-311e58ed233b58a0da48297e7a9afb315d73806779bf39874430d6c98a0202f7.json  query-3d49c80d6739648e8611426be5ace70881fc8a75890539be06c00e0ad0ddc4d0.json  query-44c68c94cbc6cee842f31b4f00d1f70b574102d27d6cbecc17e0eb1f13b73fe0.json  query-46923d75ba8809b75cf918bf8a964499936ccccb3b5247a425ed08bb82ab4aa8.json  query-5014a49ab48d5d189d1bacf92dbc2e66b36702df5d37f10c3384c7983a070539.json  query-5214bc0c5f83ce10997c973db13549495280be6e91e96d5cf997c2668f852279.json  query-589a8563856df5a9dfc3737b8a587b50bb6af61c7a057cf30ec8cb1dc44b21b5.json  query-58a9085ef5df77ee9398fa3006d57e5b21af66ece7c20be12311be2ce86a2bfe.json  query-7b84159e013f5422e0a52f6402e0440e205a18d06217f09bcec52fafcbd5d47f.json  query-7f894d0600c481b32a3d534e7f26a68bde43d740f9a05c1002521634475ed948.json  query-88189a85d90f0858cd13034cfd4a03905f49c4795a6c1a8d38f3e2e32ddb702a.json  query-a312a68102c4ad938e19b05362109e227a2ebc24d2e1272e27673ef4a11c214a.json  query-aea53f998d1f3e0bff316728eeb642c8d31a45a23128cadb07700fd3efed868c.json  query-b019455b3d5ef700f7457bba99c0effc964a79c797ec97bee8c08b9558b7d0de.json  query-b50a16b5a7546b36314070bf5309659891ec6544a8519ae9d3cf4ab14542626d.json  query-bafae26a0819980f4c0f94089364062660c10993d36d2de4c761685ec3b27102.json  query-d2b36d1a8683934ca566101dedabad4224decd5128e58ccecde15c0b3752242a.json  query-d3d0ca522e1b2042e782ed95ec082cfe24c2d474df0cfaf3f934a43b47ef069f.json  query-d65bb069367b90a6ba07a7fee046cd33d87a7ed75f707b47712f662d8dd23498.json  query-dc6ca9400e5554652a7542b3fa90d33ef818e4368747392c460c5ae43b3112af.json  query-e2486075856fe5d12b52c48fba766db9883fdaf05be6cddccfdf099557b59089.json  query-e4ffb4f08b46f98d49cf3f3ed9f58c38e888c101d7e259ebf15b4f6b935fa22b.json  query-eb827f08d8863ba35f5745b2841f1ea61e9b4129d1bc784bb9793fca18b6cfb8.json  query-efa182d02239c42091cce75273be461c2b825d884a6c64591170ef1bef80461f.json
migrations/: 0001_graph_schema.sql  0002_frontier.sql  0003_staleness.sql  0004_pubkey_relays.sql
ops/: grafana-dashboard.json
src/: error.rs  lib.rs  main.rs
src/crawl/: apply.rs  frontier.rs  mod.rs
src/daemon/: config.rs  loop_.rs  mod.rs  observe.rs  sampler.rs
src/ingest/: follow_list.rs  mod.rs  relay_list.rs  replaceable.rs  verify.rs
src/relay/: fetch.rs  health.rs  mod.rs  nip11.rs  rate_limit.rs
src/store/: follows.rs  mod.rs  pubkeys.rs  relays.rs
tests/: acquire_pipeline.rs  bootstrap.rs  concurrency.rs  contract.rs  daemon_config.rs  daemon_loop.rs  dedup.rs  edge_diff.rs  fetch_timeout.rs  follow_list_bounds.rs  frontier.rs  graph_writer.rs  id_squat.rs  migrations.rs  nip11_limits.rs  nip65_fallback.rs  observe.rs  pagination.rs  production_wiring.rs  rate_limit_backoff.rs  reconnect_policy.rs  relay_health.rs  relay_list.rs  relay_lists_store.rs  replaceable.rs  staleness.rs  verify_gate.rs
tests/common/: mod.rs
tests/mock_relay/: mod.rs
(+63 files in other folders)
