[package]
name = "web-of-trust"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"

[dependencies]
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "chrono"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
config = "0.15.23"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
