[package]
name = "web-of-trust"
version = "0.1.0"
edition = "2021"
rust-version = "1.94"

[dependencies]
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "migrate", "chrono"] }
tokio = { version = "1.52", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
config = "0.15.23"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
nostr-sdk = "0.44"
governor = "0.10"
metrics = "0.24"
# NIP-11 has no SDK accessor (02-SPIKES RELAY-02): fetch the document over HTTP
# with `Accept: application/nostr+json`. rustls TLS matches the project's
# tls-rustls posture (sqlx already uses rustls); openssl default is disabled.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
# App-side capped-exponential-with-jitter backoff (02-SPIKES RELAY-01): the SDK
# reconnect is linear, so the fetch re-arm / rate-limited-notice backoff needs
# its own jittered schedule. rand 0.9 matches governor's transitive rand.
rand = "0.9"

[dev-dependencies]
testcontainers = "0.27.3"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
